# tsg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  justfile  release-plz.toml  test_out.tsg
.github/workflows/: release-plz.yml  test.yml
crates/btsg/: Cargo.toml
crates/btsg/examples/: btsg.rs
crates/btsg/src/: lib.rs
crates/tsg/: CHANGELOG.md  Cargo.toml
crates/tsg-btsg/: Cargo.toml
crates/tsg-btsg/examples/: btsg.rs
crates/tsg-btsg/src/: lib.rs
crates/tsg-cli/: CHANGELOG.md  Cargo.toml
crates/tsg-cli/src/: cli.rs  main.rs
crates/tsg-cli/src/cli/: dot.rs  fa.rs  gtf.rs  header.rs  json.rs  merge.rs  path.rs  query.rs  split.rs  summary.rs  vcf.rs
crates/tsg-core/: CHANGELOG.md  Cargo.toml
crates/tsg-core/src/: graph.rs
crates/tsg-core/src/graph/: analysis.rs  attr.rs  edge.rs  node.rs  path.rs  utils.rs
crates/tsg-core/src/graph/analysis/: graph.rs  path.rs
crates/tsg-core/tests/data/: bubble.tsg  sampling.tsg  sampling_178_cy.json  sampling_483_cy.json  sampling_85_cy.json  test.gtf  test.path.txt  test.tsg  test.vcf  test_write.tsg
crates/tsg/examples/: btsg.rs
crates/tsg/src/: btsg.rs  graph.rs  lib.rs
crates/tsg/src/graph/: analysis.rs  attr.rs  node.rs
crates/tsg/src/io/: gtf.rs
crates/tsg/tests/data/: AR_in_40_2.gtf  AR_in_40_2.json  AR_in_40_2.vcf  sampling_46.tsg  test_mul.tsg  test_write.tsg
doc/: cli.md  tsg.md
docs/: cli.md  tsg-echo.tex  tsg.tex
examples/: btsg.rs
src/: cli.rs  graph.rs  io.rs  main.rs
src/cli/: dot.rs  fa.rs  gtf.rs  json.rs  merge.rs  path.rs  query.rs  split.rs  vcf.rs
src/graph/: attr.rs  edge.rs  group.rs  header.rs  node.rs  path.rs  read.rs  utils.rs
src/io/: fa.rs  gtf.rs  json.rs  vcf.rs
tests/data/: AR_in_40_2.json  AR_in_40_2.path.txt  AR_in_40_2_cy.json  sampling_46.gtf  sampling_46.json  sampling_46.tsg  sampling_46.vcf  scannls.tsg  test.graph.json  test.gtf  test.json  test.tsg  test.vcf  test_mul.path.txt  test_mul.tsg  test_write.tsg
