[package]
name = "tsg"
version = "0.1.0"
edition = "2024"
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
homepage = "https://github.com/cauliyang/DeepBioP"
repository = "https://github.com/cauliyang/DeepBioP"
license = "Apache-2.0"
readme = "README.md"
categories = ["bioinformatics", "algorithms"]

resolver = "2"


[dependencies]
thiserror = "2.0"
anyhow = "1.0"
rayon = { version = "1.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

flate2 = { version = "1.1.0", features = ["zlib-ng"], default-features = false }
graphina = "0.2.1"
bstr = "1.11.3"
ahash = "0.8"


tracing = "0.1.41"
tracing-subscriber = "0.3.19"
derive_builder = "0.20.2"
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.opt-dev]
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 16
lto = "thin"

[profile.release]
codegen-units = 1
lto = "fat"
