[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.package]
version = "0.1.5"
edition = "2024"
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
description = "A tool to analyze and manipulate transcript segment graph (TSG)"
homepage = "https://github.com/TSGECO/tsg"
repository = "https://github.com/TSGECO/tsg"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
bon = "3.5.1"
bstr = "1.12.0"
bytes = "1"
flate2 = { version = "1.1.1", features = ["zlib-ng"], default-features = false }
noodles = { version = "0.96", features = ["fasta"] }
petgraph = { version = "0.8.1", features = ["serde-1"] }
rayon = { version = "1.10" }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
byteorder = "1"
zstd = "0.13"

tsg-core = { version = "0.1.3", path = "crates/tsg-core" }

[profile.opt-dev]
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 16
lto = "thin"

[profile.release]
codegen-units = 1
lto = "fat"
