[package]
name = "tsg-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = ["bioinformatics", "biological-data", "cli"]
license = { workspace = true }
readme = "../../README.md"
description = { workspace = true }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-markdown = "0.1.4"
clap-verbosity-flag = { version = "3.0", features = ["tracing"] }
clap_complete = "4.5.47"
colored = "3"
anyhow = { workspace = true }
tracing = { workspace = true }
bstr = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }

tsg = { version = "0.1", path = "../tsg" }

[[bin]]
path = "src/main.rs"
name = "tsg-cli"
