[package]
name = "tsg"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = ["bioinformatics", "biological-data"]
license = { workspace = true }
readme = "../../README.md"
description = "Deep Learning Processing Library for Biological Data"

[dependencies]
tsg-core = { workspace = true, optional = true }
btsg = { workspace = true, optional = true }

[features]
default = ["dep:tsg-core"]
btsg = ["dep:btsg"]

[package.metadata.docs.rs]
all-features = true
